# isshc

./: README.md  pyproject.toml
src/isshc/: __init__.py  isshc.py
tests/: test_isshc.py
