[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "isshc"
version = "0.1.0"
dependencies = [
    "paramiko",
]
requires-python = ">= 3.8"

[project.optional-dependencies]
dev = [
    "isort",
    "black",
    "mypy",
    "pytest",
    "pytest-cov",
    "pytest-timeout",
    "types-paramiko",
]

[tool.black]
line-length = 100

[tool.flake8]
max-line-length = 100

[tool.setuptools]
package-dir = {"isshc" = "src/isshc"}

[tool.setuptools.package-data]
isshc = ["py.typed"]
